# bluesea-ai-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py  style.css
app/logs/: execution_logs.csv  execution_logs.jsonl
data/index/: embeddings_manifest.json  vectors.jsonl
data/processed/: chunks.jsonl  document_status.csv  inventory.json
docs/: architecture.md
docs/tickets/: 01_cierre_ticket_documental.md  01_recoleccion_organizacion.md  02_cierre_ticket_procesamiento.md  02_proceso_extraccion_contenido.md  03_cierre_ticket_indexacion.md  03_indexacion_vectorial.md  04_cierre_ticket_recuperacion.md  04_recuperacion_rag.md  05_cierre_ticket_respuestas.md  05_generacion_respuestas.md  06_interfaz_mantenimiento.md
documents/inventory/: document_inventory.csv
notebooks/: 01_ticket1_inventory_validation_colab.ipynb  02_ticket2_processing_chunks_colab.ipynb  03_ticket3_vector_index_colab.ipynb  04_ticket4_retrieval_colab.ipynb  05_ticket5_answer_generation_colab.ipynb
scripts/: 01_inventory.py  02_process.py  03_index.py  04_retrieve.py  05_answer.py
src/rag_bsf/: answer_generation.py  cli.py  config.py  document_loader.py  embeddings.py  rag_pipeline.py  retrieval.py  schemas.py  text_processing.py  vector_store.py
tests/: conftest.py  test_answer_generation.py  test_document_validation.py  test_indexing.py  test_retrieval.py  test_text_processing.py
